--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="w-full justify-center flex fixed backdrop-blur-sm bg-zinc-900/10">
 
     <nav class="max-w-screen-xl w-full flex items-center gap-20 h-20 ">
-     <h1 class="flex-1 text-white font-s"> <img src="/Patty-Nails-main/img/logo.svg" alt=""></h1>
+     <h1 class="flex-1 text-white font-s"> <img src="./img/logo.svg" alt=""></h1>
 
       <ul class="flex gap-10 text-white">
             <li class="px-2 py-1"><a href="#community">Community</a></li>
@@ -38,7 +38,7 @@
 
 <main class="w-full justify-center flex flex-col">
 
-<section style="background-image: url(/Patty-Nails-main/Patty-Nails-main/img/hero.svg)" class="w-full bg-cover bg-no-repeat bg-center h-screen flex items-center">
+<section style="background-image: url(./img/hero.svg)" class="w-full bg-cover bg-no-repeat bg-center h-screen flex items-center">
   <div class="flex flex-col ml-40 gap-7" >
   <h1 class="text-white text-8xl  w-58 font-custom "> Patty Nails </h1>
   <button class="px-35 px-5 py-1 bg-zinc-900/30 text-white bg-transparent rounded-xl transition-transform duration-300 transform hover:scale-105 hover:bg-zinc-800 "> agende aqui</button>
@@ -48,15 +48,15 @@
 <section class="bg-black w-full h-[400px] relative flex justify-center">
   <div class="flex gap-20 absolute -top-36">
       <div class="w-72 h-72 bg-neutral-50/50 rounded-xl text-center flex flex-col items-center justify-center p-4 overflow-hidden transition-transform duration-300 hover:scale-110 hover:opacity-80"">
-          <img class="max-w-full h-auto mb-2" src="/Patty-Nails-main/Patty-Nails-main/img/mani.svg" alt="">
+          <img class="max-w-full h-auto mb-2" src="./img/mani.svg" alt="">
           <p class="text-white">Manicure e Pedicure</p>
       </div>
       <div class="w-72 h-72 bg-neutral-50/50 rounded-xl text-center flex flex-col items-center justify-center p-4 overflow-hidden transition-transform duration-300 hover:scale-110 hover:opacity-80"">
-          <img class="max-w-full h-auto mb-2" src="/Patty-Nails-main/Patty-Nails-main/img/gel.svg" alt="">
+          <img class="max-w-full h-auto mb-2" src="./img/gel.svg" alt="">
           <p class="text-white">Unha em gel/fibra/decorada</p>
       </div>
       <div class="w-72 h-72 bg-neutral-50/50 rounded-xl text-center flex flex-col items-center justify-center p-4 overflow-hidden transition-transform duration-300 hover:scale-110 hover:opacity-80"">
-          <img class="max-w-full h-auto mb-2" src="/Patty-Nails-main/Patty-Nails-main/img/spa.svg" alt="">
+          <img class="max-w-full h-auto mb-2" src="./img/spa.svg" alt="">
           <p class="text-white">SPA das mãos e pés</p>
       </div>
   </div>
@@ -68,10 +68,10 @@
                 <p class="">Qualificados para sua beleza</p>
                 <div class="flex gap-6" >
                     <button>
-                        <img src="/Patty-Nails-main/Patty-Nails-main/img/leftArrow.svg" alt="">
+                        <img src="./img/leftArrow.svg" alt="">
                     </button>
                     <button>
-                        <img src="/Patty-Nails-main/Patty-Nails-main/img/rightArrow.svg" alt="">
+                        <img src="./img/rightArrow.svg" alt="">
                     </button>
                 </div>
              
